2010-01-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/dict.n: [Bug 2929546]: Clarify just what [dict with] and [dict
	update] are doing with variables.

2010-01-18  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CreateScriptRecord): [Bug 2918110]: Initialize
	the EventScriptRecord (esPtr) fully before handing it to
	Tcl_CreateChannelHandler for registration. Otherwise a reflected
	channel calling 'chan postevent' (== Tcl_NotifyChannel) in its
	'watchProc' will cause the function 'TclChannelEventScriptInvoker'
	to be run on an uninitialized structure.

2010-01-18  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj): [Bug 2932421]: Stop
	the [format] command from causing argument objects to change their
	internal representation when not needed. Thanks to Alexandre Ferrieux
	for this fix.

2010-01-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclCompExpr.c: Warning: array subscript has type 'char'
	* generic/tclPkg.c:
	* libtommath/bn_mp_read_radix.c:
	* unix/tclUnixCompat.c:	Fix gcc warning: signed and unsigned type
				in conditional expression.
	* unix/tcl.m4 Add support for Haiku and CYGWIN dynamical loading
	* unix/configure (regenerated)
	* unix/Makefile.in
	* unix/.cvsignore
	* tests/stack.test Reduced minimum required C-stack size to 2034:
	         CYGWIN has this stack size and the test runs fine!
	* generic/tclEnv.c Fix environment tests under CYGWIN
	* generic/tclPort.h
	* tests/env.test

2010-01-05  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c (TclPathPart):	Correct inconsistency between
	* tests/fileName.test (filename-14.31):	the string rep and the intrep
	of a path value created by [file rootname].  Thanks to Vitaly Magerya
	for reporting.  [Bug 2918610]

2010-01-03  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tcl.m4 (SC_CONFIG_CFLAGS): [Bug 1636685]: Use the configuration
	for modern FreeBSD suggested by the FreeBSD porter.
