@@ -1,3 +1,11 @@
+2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.h            Use correct TCL_LL_MODIFIER for CYGWIN.
+	                           Formatting (all backported from HEAD)
+	* generic/tclTest.c:       Fix gcc 4.4 warning: ignoring return value of ‘write’,
+	* unix/tclUnixPipe.c
+	* unix/tclUnixNotify.c
+
 2010-01-19  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/dict.n: [Bug 2929546]: Clarify just what [dict with] and [dict
